tests/transpiler/x/zig/in_operator.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/in_operator.zig:6:83: error: array literal requires address-of operator (&) to coerce to slice type '[]const i64'
